--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <div id="root"></div>
     <div id="modal-root"></div>
+    <div id="menu-root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
